# rustky

./: AGENTS.md  Cargo.toml  PKGBUILD  README.md  rustky.service
examples/: config.toml
src/: config.rs  main.rs  monitor.rs  render.rs  script_context.rs  styled.rs  wayland.rs
src/scripting/: mod.rs  python_engine.rs  rhai_engine.rs
