[package]
name = "rustky"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A modern conky-like system monitor for Wayland"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pegasusheavy/rustky"
homepage = "https://github.com/pegasusheavy/rustky"
keywords = ["wayland", "system-monitor", "conky", "linux", "layer-shell"]
categories = ["command-line-utilities", "os"]
exclude = ["PKGBUILD", "rustky.service", "*.pkg.tar.zst", "AGENTS.md", "pkg/"]

[features]
default = []
rhai-scripting = ["dep:rhai"]
python-scripting = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
sysinfo = "0.33"
chrono = "0.4"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
calloop = "0.13"
calloop-wayland-source = "0.3"
skia-rs = { version = "0.2", default-features = false, features = ["std", "text"] }
skia-rs-canvas = { version = "0.2", features = ["text"] }
rhai = { version = "1.24", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["auto-initialize"] }
